# LastFinance

./: Cargo.toml  build.bat  index.html
data/: Cargo.toml
data/src/: account.rs  category.rs  category_transfer.rs  lib.rs  transaction.rs
dev_resources/test_queries/: category_total.sql  transactions_join.sql
public/: last_finance.css  last_finance.js
src/: app.rs
src-tauri/: Cargo.toml  db.db3  tauri.conf.json
src-tauri/src/: database.rs  main.rs  persistent_data.rs
src-tauri/src/database/: category.rs  table_actions.rs  tests.rs
src-tauri/test_input/: month_daily_transactions.csv
src/app/: categories.rs  error_modal.rs  home.rs  nav.rs  transactions.rs
src/app/home/: account_box.rs
