[package]
name = "last_finance-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5", features = ["csr"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

data = { path = "data"}

[workspace]
members = ["src-tauri", "data"]
