[package]
name = "last_finance-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.10", features = ["csr"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

data = { path = "data"}
leptos_router = { version = "0.6.10", features = ["csr"] }
time = { version = "0.3.35", features = ['parsing', 'formatting']}
chrono = "0.4.38"
leptos-chartistry = "0.1.5"

[workspace]
members = ["src-tauri", "data"]
